<resources>
    <string name="app_name">货物清单</string>
    <string name="goods_Info">商品信息</string>
    <string name="goods_name">商品名称</string>
    <string name="goods_price">商品单价</string>
    <string name="yuan">元</string>
    <string name="goods_quantity">商品数量</string>
    <string name="goods_quantity_hint">商品数量(选填)</string>
    <string name="goods_barcode">商品编码</string>
    <string name="supplier_info">供应商信息</string>
    <string name="supplier_name">供应商名称</string>
    <string name="supplier_contact">联系人</string>
    <string name="supplier_phone_number">联系电话</string>
    <string name="supplier_email">联系邮箱</string>
    <string name="no_data">暂时没有货物，点击右下角，添加一条数据。</string>
    <string name="btn_editor">编辑</string>
    <string name="btn_subscribe">订购更多</string>
    <string name="btn_delete_goods">删除商品</string>
    <string name="list_price">价格：%1$s</string>
    <string name="list_quantity">剩余数量：%1$s</string>
    <string name="add_new_data">添加新数据</string>
    <string name="change_data">修改数据</string>
    <string name="enter_error">输入有误，请重新输入</string>
    <string name="enter_price_error">输入价格超出限制</string>
    <string name="enter_quantity_error">输入数量超出限制</string>
    <string name="add_data_success">添加失败</string>
    <string name="add_success">添加成功</string>
    <string name="add_fild">添加失败</string>
    <string name="change_fild">修改失败</string>
    <string name="chang_success">修改成功</string>
    <string name="quiet_msg">未保存，要退出吗?</string>
    <string name="quit_text">退出</string>
    <string name="continue_editing">继续编辑</string>
    <string name="delete_msg">删除提示</string>
    <string name="delete_text">删除</string>
    <string name="cancel">取消</string>
    <string name="delete_fild">删除失败</string>
    <string name="delete_success">删除成功</string>
    <string name="inptu_number">输入要修改的数量</string>
    <string name="chaneg_success">修改成功</string>
</resources>
