<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_16dp"
        tools:context="cn.xufucun.udacity.inventory.EditorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/up_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding_4dp">

                <EditText
                    android:id="@+id/edit_goods_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/goods_name"
                    android:inputType="text" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_goods_price"
                        style="@style/EditorFieldStyle"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:hint="@string/goods_price"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/label_weight_units"
                        style="@style/EditorUnitsStyle"
                        android:text="@string/yuan" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/edit_goods_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/goods_quantity"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_supplier_phone_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_phone_number"
                android:inputType="phone" />
        </LinearLayout>


    </LinearLayout>
</layout>